[gd_scene load_steps=10 format=3 uid="uid://b5v7snvxsjtnu"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_e8b6d"]
[ext_resource type="Texture2D" uid="uid://damg6yaopswkk" path="res://Background/Fondo Menu.jpg" id="2_c4xmr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_83pxc"]
bg_color = Color(0.473215, 0.449859, 0.879242, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1it7m"]
bg_color = Color(0.47451, 0.45098, 0.878431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fwyhd"]
bg_color = Color(0.47451, 0.45098, 0.878431, 1)

[sub_resource type="Animation" id="Animation_i0amt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_l0obv"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1tse1"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bty0q"]
_data = {
"RESET": SubResource("Animation_i0amt"),
"fade_in": SubResource("Animation_l0obv"),
"fade_out": SubResource("Animation_1tse1")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1280.0
offset_bottom = -720.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e8b6d")

[node name="Sprite2D" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 2.0
offset_right = 1097.0
offset_bottom = 771.0
scale = Vector2(1.16911, 0.932642)
texture = ExtResource("2_c4xmr")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 389.0
offset_top = 233.0
offset_right = 1051.0
offset_bottom = 346.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.76, 2.42)
alignment = 1

[node name="PLAY" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_83pxc")
text = "PLAY"
icon_alignment = 1

[node name="SCORE" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_1it7m")
text = "SCORE"

[node name="QUIT" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_fwyhd")
text = "QUIT"

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bty0q")
}

[node name="ColorRect" type="ColorRect" parent="Transition"]
offset_right = 1282.0
offset_bottom = 719.0
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="VBoxContainer/PLAY" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/SCORE" to="." method="_on_score_pressed"]
[connection signal="pressed" from="VBoxContainer/QUIT" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="Transition" to="." method="_on_transition_animation_finished"]
